@@ -7,6 +7,7 @@ Date: ????
     - Replicated /seed
     - Replicated /evolution
     - Replicated /time
+    - Replicated /reply & /r
   Bugfixes:
     - /w and /s now actually work
     - Whispering now can't crash if there's no recipient passed
